supabase kisayolu menu ye eklendi

--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@ td.fz{background:#f5f5f5;color:#999;font-weight:700}
       <button class="drawer-btn" style="background:#8e44ad;color:#fff" onclick="openFaturaModal();closeDrawer()">🧾 Fatura / İrsaliye Yükle</button>
       <button class="drawer-btn" style="background:#c0392b;color:#fff" onclick="openSktModal();closeDrawer()">⏰ SKT Takibi</button>
       <button class="drawer-btn drawer-btn-gray" onclick="exportData()">CSV İndir</button>
+      <a href="https://supabase.com/dashboard" target="_blank" class="drawer-btn" style="background:#3ecf8e;color:#fff;text-decoration:none;display:block;text-align:center">🗄️ Supabase Veritabanı</a>
       <button class="drawer-btn drawer-btn-red" onclick="doSignOut()">Çıkış Yap</button>
     </div>
   </div>
