--- a/index.html
+++ b/index.html
@@ -33,26 +33,30 @@ body{font-family:'Segoe UI',Arial,sans-serif;background:#f0f2f5;min-height:100vh
 .auth-note{font-size:11px;color:#aaa;margin-top:12px;line-height:1.5}
 #sube-screen{display:none;align-items:center;justify-content:center;min-height:100vh;background:linear-gradient(135deg,var(--dark) 0%,var(--deep) 100%);padding:20px}
 .sube-card{background:#fff;border-radius:20px;padding:36px 28px;width:100%;max-width:380px;text-align:center;box-shadow:0 20px 60px rgba(0,0,0,0.3)}
-#loading-screen{display:none;align-items:center;justify-content:center;flex-direction:column;min-height:100vh;background:linear-gradient(135deg,#0d0d1a 0%,#1a1a2e 50%,#16213e 100%);gap:0;overflow:hidden;position:relative}
-#loading-screen::before{content:'';position:absolute;width:400px;height:400px;background:radial-gradient(circle,rgba(232,89,12,0.18) 0%,transparent 70%);border-radius:50%;animation:pulseGlow 2.5s ease-in-out infinite}
-.splash-logo{display:flex;flex-direction:column;align-items:center;gap:8px;animation:splashDrop 1s cubic-bezier(0.34,1.56,0.64,1) 0.2s forwards;opacity:0;transform:translateY(-50px)}
-.splash-icon{font-size:72px;line-height:1;filter:drop-shadow(0 6px 28px rgba(232,89,12,0.7));animation:iconPop 0.9s cubic-bezier(0.34,1.56,0.64,1) 0.5s forwards;opacity:0;transform:scale(0.1)}
-.splash-brand{font-size:40px;font-weight:900;letter-spacing:8px;color:#fff;text-shadow:0 0 40px rgba(232,89,12,0.9);animation:splashDrop 0.9s cubic-bezier(0.34,1.56,0.64,1) 1s forwards;opacity:0;transform:translateY(30px)}
-.splash-brand span{color:var(--orange)}
-.splash-sub{font-size:12px;letter-spacing:5px;color:rgba(255,255,255,0.45);text-transform:uppercase;margin-top:4px;animation:fadeIn 0.8s ease 1.8s forwards;opacity:0}
-.splash-dots{display:flex;gap:10px;margin-top:48px;animation:fadeIn 0.5s ease 2.2s forwards;opacity:0}
-.splash-dot{width:9px;height:9px;border-radius:50%;background:var(--orange);animation:dotBounce 1.4s ease-in-out infinite}
-.splash-dot:nth-child(2){animation-delay:0.25s;background:rgba(232,89,12,0.6)}
-.splash-dot:nth-child(3){animation-delay:0.5s;background:rgba(232,89,12,0.3)}
-.splash-line{width:0;height:2px;background:linear-gradient(90deg,transparent,var(--orange),transparent);margin-top:36px;border-radius:2px;animation:lineExpand 1.2s ease 1.6s forwards}
-@keyframes splashDrop{to{opacity:1;transform:translateY(0) scale(1)}}
-@keyframes iconPop{to{opacity:1;transform:scale(1)}}
+#loading-screen{display:none;align-items:center;justify-content:center;flex-direction:column;min-height:100vh;background:#0a0a0f;gap:0;overflow:hidden;position:relative}
+#loading-screen::before{content:'';position:absolute;inset:0;background:radial-gradient(ellipse 70% 60% at 50% 50%,rgba(232,89,4,0.22) 0%,transparent 70%);animation:bgPulse 3s ease-in-out infinite}
+#loading-screen::after{content:'';position:absolute;inset:0;background:repeating-linear-gradient(0deg,transparent,transparent 40px,rgba(255,255,255,0.015) 40px,rgba(255,255,255,0.015) 41px),repeating-linear-gradient(90deg,transparent,transparent 40px,rgba(255,255,255,0.015) 40px,rgba(255,255,255,0.015) 41px)}
+.splash-icon{font-size:100px;line-height:1;filter:drop-shadow(0 0 40px rgba(232,89,4,0.9)) drop-shadow(0 0 80px rgba(232,89,4,0.5));animation:burgerPop 1.1s cubic-bezier(0.34,1.7,0.64,1) 0.3s forwards;opacity:0;transform:scale(0) rotate(-20deg);position:relative;z-index:2}
+.splash-logo{display:flex;flex-direction:column;align-items:center;gap:6px;position:relative;z-index:2}
+.splash-brand{display:flex;gap:0;align-items:baseline;margin-top:16px}
+.splash-brand .letter{font-size:56px;font-weight:900;color:#fff;letter-spacing:4px;opacity:0;transform:translateY(40px) scale(0.5);display:inline-block;text-shadow:0 0 30px rgba(232,89,4,0.8),0 4px 20px rgba(0,0,0,0.8);font-style:italic}
+.splash-brand .letter.orange{color:var(--orange);text-shadow:0 0 40px rgba(232,89,4,1),0 0 80px rgba(232,89,4,0.6),0 4px 20px rgba(0,0,0,0.8)}
+.splash-brand .gap{width:18px;display:inline-block}
+.splash-sub{font-size:11px;letter-spacing:8px;color:rgba(255,255,255,0.35);text-transform:uppercase;margin-top:6px;opacity:0;animation:fadeSlideUp 0.8s ease 3.2s forwards}
+.splash-line{width:0;height:3px;background:linear-gradient(90deg,transparent,var(--orange),#fff,var(--orange),transparent);margin-top:24px;border-radius:2px;box-shadow:0 0 12px rgba(232,89,4,0.8);animation:lineExpand 1s cubic-bezier(0.4,0,0.2,1) 2.8s forwards;position:relative;z-index:2}
+.splash-dots{display:flex;gap:8px;margin-top:40px;opacity:0;animation:fadeIn 0.4s ease 3.5s forwards;position:relative;z-index:2}
+.splash-dot{width:8px;height:8px;border-radius:50%;background:var(--orange);box-shadow:0 0 8px rgba(232,89,4,0.8);animation:dotBounce 1.2s ease-in-out infinite}
+.splash-dot:nth-child(2){animation-delay:0.2s;opacity:0.6}
+.splash-dot:nth-child(3){animation-delay:0.4s;opacity:0.3}
+@keyframes bgPulse{0%,100%{opacity:0.6}50%{opacity:1}}
+@keyframes burgerPop{0%{opacity:0;transform:scale(0) rotate(-20deg)}60%{transform:scale(1.25) rotate(8deg)}80%{transform:scale(0.95) rotate(-3deg)}100%{opacity:1;transform:scale(1) rotate(0deg)}}
+@keyframes letterIn{to{opacity:1;transform:translateY(0) scale(1)}}
 @keyframes fadeIn{to{opacity:1}}
-@keyframes dotBounce{0%,100%{transform:translateY(0);opacity:1}50%{transform:translateY(-12px);opacity:0.5}}
-@keyframes lineExpand{to{width:160px}}
-@keyframes pulseGlow{0%,100%{transform:scale(1);opacity:0.5}50%{transform:scale(1.4);opacity:1}}
-#loading-screen.fade-out{animation:splashFadeOut 0.7s ease forwards}
-@keyframes splashFadeOut{to{opacity:0;transform:scale(1.08)}}
+@keyframes fadeSlideUp{from{opacity:0;transform:translateY(10px)}to{opacity:1;transform:translateY(0)}}
+@keyframes dotBounce{0%,100%{transform:translateY(0)}50%{transform:translateY(-10px)}}
+@keyframes lineExpand{to{width:220px}}
+#loading-screen.fade-out{animation:splashFadeOut 0.8s cubic-bezier(0.4,0,1,1) forwards}
+@keyframes splashFadeOut{0%{opacity:1;transform:scale(1)}100%{opacity:0;transform:scale(1.12) translateY(-20px)}}
 #app{display:none;min-height:100vh;flex-direction:column}
 #topbar{background:var(--dark);color:#fff;padding:12px 16px;display:flex;align-items:center;gap:10px;position:sticky;top:0;z-index:100;box-shadow:0 2px 8px rgba(0,0,0,0.3)}
 #menu-btn{background:none;border:none;color:#fff;font-size:22px;cursor:pointer;padding:4px 8px;border-radius:6px;line-height:1}
@@ -229,8 +233,8 @@ td.fz{background:#f5f5f5;color:#999;font-weight:700}
 <div id="loading-screen">
   <div class="splash-icon">🍔</div>
   <div class="splash-logo">
-    <div class="splash-brand">ERCAN<span>BRGR</span></div>
-    <div class="splash-sub">Envanter Sistemi</div>
+    <div class="splash-brand" id="splash-brand-letters"></div>
+    <div class="splash-sub">ENVANTERİ &nbsp;•&nbsp; STOK TAKİP</div>
   </div>
   <div class="splash-line"></div>
   <div class="splash-dots">
@@ -383,7 +387,8 @@ async function doGiris(){const email=document.getElementById('giris-email').valu
 async function doKayit(){const email=document.getElementById('kayit-email').value.trim(),pass=document.getElementById('kayit-sifre').value,pass2=document.getElementById('kayit-sifre2').value,errEl=document.getElementById('kayit-err'),btn=document.getElementById('kayit-btn');if(!email||!pass){errEl.textContent='E-posta ve şifre girin';return;}if(pass.length<6){errEl.textContent='Şifre en az 6 karakter olmalı';return;}if(pass!==pass2){errEl.textContent='Şifreler eşleşmiyor';return;}btn.disabled=true;btn.textContent='Kayıt olunuyor...';errEl.textContent='';const{data,error}=await sb.auth.signUp({email,password:pass});btn.disabled=false;btn.textContent='Kayıt Ol';if(error){let msg='Kayıt başarısız';if(error.message.includes('already registered'))msg='Bu e-posta zaten kayıtlı, giriş yapın';else if(error.message.includes('invalid'))msg='Geçerli bir e-posta girin';errEl.textContent=msg;return;}if(data.user&&!data.session){errEl.style.color='#27ae60';errEl.textContent='Onay e-postası gönderildi! Gelen kutunuzu kontrol edin.';return;}await onSignedIn(data.user);}
 async function doSifreSifirla(){const email=document.getElementById('giris-email').value.trim();if(!email){document.getElementById('giris-err').textContent='Önce e-posta adresinizi girin';return;}const{error}=await sb.auth.resetPasswordForEmail(email,{redirectTo:'https://ercanbrgr.github.io/envanter-site'});if(error){document.getElementById('giris-err').textContent='Hata: '+error.message;return;}document.getElementById('giris-err').style.color='#27ae60';document.getElementById('giris-err').textContent='Şifre sıfırlama linki e-postanıza gönderildi!';}
 async function doSignOut(){if(!confirm('Çıkış yapmak istediğinize emin misiniz?'))return;await sb.auth.signOut();currentUser=null;isAdmin=false;appData={products:[]};showScreen('auth-screen');}
-function showScreen(id){['auth-screen','sube-screen','loading-screen','app'].forEach(s=>{const el=document.getElementById(s);if(s==='app'){el.style.display=s===id?'flex':'none';if(s===id)el.style.flexDirection='column';}else{el.style.display=s===id?'flex':'none';}});}
+function showScreen(id){['auth-screen','sube-screen','loading-screen','app'].forEach(s=>{const el=document.getElementById(s);if(s==='app'){el.style.display=s===id?'flex':'none';if(s===id)el.style.flexDirection='column';}else{el.style.display=s===id?'flex':'none';}});if(id==='loading-screen')initSplashLetters();}
+function initSplashLetters(){const el=document.getElementById('splash-brand-letters');if(!el||el._inited)return;el._inited=true;const letters=[{c:'E',o:false},{c:'R',o:false},{c:'C',o:false},{c:'A',o:false},{c:'N',o:false},{c:' ',o:false,gap:true},{c:'B',o:true},{c:'R',o:true},{c:'G',o:true},{c:'R',o:true}];el.innerHTML='';letters.forEach((l,i)=>{if(l.gap){const g=document.createElement('span');g.className='gap';el.appendChild(g);return;}const s=document.createElement('span');s.className='letter'+(l.o?' orange':'');s.textContent=l.c;el.appendChild(s);const delay=1400+(i*130);setTimeout(()=>{s.style.animation=`letterIn 0.55s cubic-bezier(0.34,1.56,0.64,1) forwards`;s.style.animationDelay='0ms';},delay);});}
 async function onSignedIn(user){currentUser=user;showScreen('loading-screen');const profil=await loadProfil();if(!profil){showScreen('sube-screen');setTimeout(()=>document.getElementById('sube-input').focus(),300);return;}isAdmin=(profil.rol==='admin');if(!profil.email)sb.from('sube_profiller').update({email:user.email}).eq('user_id',user.id);await loadAllData();loadSktData();openApp();}
 async function loadProfil(){const{data}=await sb.from('sube_profiller').select('*').eq('user_id',currentUser.id).single();return data;}
 async function saveSube(){const sube=document.getElementById('sube-input').value.trim();if(!sube){document.getElementById('sube-err').textContent='Şube adı girin';return;}document.getElementById('sube-err').textContent='';const{error}=await sb.from('sube_profiller').upsert({user_id:currentUser.id,sube_adi:sube,email:currentUser.email});if(error){document.getElementById('sube-err').textContent='Kaydedilemedi: '+error.message;return;}await initDefaultProducts();await loadAllData();openApp();}
@@ -391,7 +396,7 @@ async function addNewProduct(){const ad=prompt('Yeni ürün adı:');if(!ad||!ad.
 async function openSubeModal(){const profil=await loadProfil();const yeni=prompt('Yeni şube adı:',profil?.sube_adi||'');if(yeni&&yeni.trim()){await sb.from('sube_profiller').upsert({user_id:currentUser.id,sube_adi:yeni.trim()});document.getElementById('topbar-user').textContent=yeni.trim();document.getElementById('drawer-sube-info').textContent=yeni.trim();toast('Şube adı güncellendi');}}
 async function loadAllData(){const{data:urunler}=await sb.from('urunler').select('*').eq('user_id',currentUser.id).order('sira');const{data:girdiler}=await sb.from('gunluk_girdiler').select('*').eq('user_id',currentUser.id).order('tarih',{ascending:true});appData.products=(urunler||[]).map(u=>({id:u.id,sira:u.sira,name:u.ad,birim:u.birim||'Adet',koli:u.koli||'',adet:u.adet_koli||'',minStok:u.min_stok??null,birimFiyat:u.birim_fiyat||0,entries:(girdiler||[]).filter(g=>g.urun_sira===u.sira).map(g=>({dbId:g.id,gun:g.gun||'',tarih:g.tarih||'',acilis:g.acilis||'',gelen:g.gelen||'',gelenIade:g.gelen_iade||'',transfer:g.transfer||'',kapanis:g.kapanis||'',mallara:g.mallara_gore||'',zayi:g.zayi||'',odenmez:g.odenmez||'',not:g.gun_notu||''}))}))}
 async function initDefaultProducts(){const inserts=DEFAULT_PRODUCTS.map((p,i)=>({user_id:currentUser.id,sira:i,ad:p.name,birim:p.birim,koli:'',adet_koli:''}));await sb.from('urunler').upsert(inserts,{onConflict:'user_id,sira'});}
-async function openApp(){const ls=document.getElementById('loading-screen');if(ls){ls.classList.add('fade-out');await new Promise(r=>setTimeout(r,650));}showScreen('app');const profil=await loadProfil();const subeAdi=profil?.sube_adi||currentUser.email;document.getElementById('topbar-user').textContent=subeAdi;document.getElementById('drawer-user-info').textContent=currentUser.email;document.getElementById('drawer-sube-info').textContent=subeAdi;setSyncIcon('ok');if(isAdmin){document.getElementById('topbar-user').innerHTML=subeAdi+' <span class="admin-badge">ADMİN</span>';}renderSidebar();if(isAdmin)renderAdminPanel();else renderPage();}
+async function openApp(){const ls=document.getElementById('loading-screen');if(ls){const elapsed=window._splashStart?Date.now()-window._splashStart:9999;const minShow=4200;const wait=Math.max(0,minShow-elapsed);await new Promise(r=>setTimeout(r,wait));ls.classList.add('fade-out');await new Promise(r=>setTimeout(r,800));}showScreen('app');const profil=await loadProfil();const subeAdi=profil?.sube_adi||currentUser.email;document.getElementById('topbar-user').textContent=subeAdi;document.getElementById('drawer-user-info').textContent=currentUser.email;document.getElementById('drawer-sube-info').textContent=subeAdi;setSyncIcon('ok');if(isAdmin){document.getElementById('topbar-user').innerHTML=subeAdi+' <span class="admin-badge">ADMİN</span>';}renderSidebar();if(isAdmin)renderAdminPanel();else renderPage();}
 function setSyncIcon(state){const el=document.getElementById('sync-indicator');if(state==='ok')el.textContent='☁️';else if(state==='saving')el.textContent='🔄';else if(state==='err')el.textContent='⚠️';}
 function toggleDrawer(){document.getElementById('drawer').classList.toggle('open');document.getElementById('drawer-overlay').classList.toggle('open');}
 function closeDrawer(){document.getElementById('drawer').classList.remove('open');document.getElementById('drawer-overlay').classList.remove('open');}
@@ -845,7 +850,7 @@ if('serviceWorker'in navigator&&location.protocol!=='file:'){navigator.serviceWo
 let deferredPrompt;
 window.addEventListener('beforeinstallprompt',e=>{e.preventDefault();deferredPrompt=e;document.getElementById('install-bar').classList.add('show');});
 function installApp(){if(deferredPrompt){deferredPrompt.prompt();deferredPrompt.userChoice.then(()=>{deferredPrompt=null;document.getElementById('install-bar').classList.remove('show');});}}
-window.addEventListener('load',async()=>{showScreen('loading-screen');const{data:{session}}=await sb.auth.getSession();if(session){await onSignedIn(session.user);}else{showScreen('auth-screen');}sb.auth.onAuthStateChange(async(event,session)=>{if(event==='SIGNED_OUT')showScreen('auth-screen');});});
+window.addEventListener('load',async()=>{window._splashStart=Date.now();showScreen('loading-screen');const{data:{session}}=await sb.auth.getSession();if(session){await onSignedIn(session.user);}else{showScreen('auth-screen');}sb.auth.onAuthStateChange(async(event,session)=>{if(event==='SIGNED_OUT')showScreen('auth-screen');});});
 </script>
 </body>
 </html>
