--- a/index.html
+++ b/index.html
@@ -505,6 +505,29 @@ function renderAdminAnaSayfa(){
     <div class="stat-card"><div class="sl">Toplam Kayıt</div><div class="sv">${girdiler.length}</div></div>
   </div>
   ${(()=>{const allSkt=adminData.skt||[];const kritik=allSkt.filter(s=>sktGunFark(s.son_tarih)<=5);if(!kritik.length)return '';let shtml='<div style="background:#fff3cd;border:2px solid #ffc107;border-radius:10px;padding:10px 14px;margin-bottom:16px"><div style="font-weight:800;color:#856404;font-size:13px;margin-bottom:8px">⏰ TÜM ŞUBLERDE SKT UYARILARI ('+kritik.length+')</div>';[...kritik].sort((a,b)=>a.son_tarih.localeCompare(b.son_tarih)).forEach(s=>{const p=adminData.profiller.find(pr=>pr.user_id===s.user_id);const g=sktGunFark(s.son_tarih);const c=g<0?'#e74c3c':g===0?'#e74c3c':g<=2?'#e67e22':'#856404';const badge=g<0?'SÜRESİ GEÇTİ':g===0?'BUGÜN!':g+' gün kaldı';shtml+='<div style="display:flex;align-items:center;padding:5px 0;border-bottom:1px solid #ffe8a1;gap:8px"><span style="color:#aaa;font-size:11px;min-width:90px">'+(p?.sube_adi||'?')+'</span><span style="font-weight:700;color:#333;flex:1">'+s.urun_adi+(s.miktar?' ('+s.miktar+')':'')+'</span><span style="color:'+c+';font-weight:700;font-size:11px">'+badge+'</span></div>';});shtml+='</div>';return shtml;})()}`;
+  // En çok satan ürünler (tüm şubeler, bu ay)
+  const urunSatisAdmin={};
+  girdiler.filter(g=>g.tarih&&g.tarih.startsWith(buAy)).forEach(g=>{
+    const urun=urunler.find(u=>u.user_id===g.user_id&&u.sira===g.urun_sira);
+    if(!urun)return;
+    const ad=urun.ad;
+    if(!urunSatisAdmin[ad])urunSatisAdmin[ad]=0;
+    urunSatisAdmin[ad]+=n(g.mallara_gore);
+  });
+  const topSatan=Object.entries(urunSatisAdmin).filter(([,v])=>v>0).sort(([,a],[,b])=>b-a).slice(0,3);
+  const madalyalar=['🥇','🥈','🥉'];
+  if(topSatan.length){
+    html+=`<div style="background:linear-gradient(135deg,#1a1a2e 0%,#16213e 100%);border-radius:16px;padding:14px 16px;margin-bottom:14px;box-shadow:0 4px 16px rgba(0,0,0,0.15)">
+    <div style="font-size:11px;font-weight:700;color:#ffb380;letter-spacing:2px;text-transform:uppercase;margin-bottom:10px">🏆 ${buAy.slice(5)}. Ay — TÜM ŞUBELERDE EN ÇOK SATAN</div>
+    <div style="background:linear-gradient(135deg,#e85d04,#ff9a00);border-radius:12px;padding:12px 16px;margin-bottom:10px;display:flex;align-items:center;gap:12px">
+      <span style="font-size:36px">🔥</span>
+      <div><div style="font-size:18px;font-weight:900;color:#fff;letter-spacing:1px">${topSatan[0][0]}</div>
+      <div style="font-size:12px;color:rgba(255,255,255,0.85);margin-top:2px">${r(topSatan[0][1])} satıldı (tüm şubeler toplam)</div></div>
+    </div>
+    <div style="display:flex;gap:8px">
+      ${topSatan.map(([ad,val],i)=>`<div style="flex:1;background:rgba(255,255,255,0.07);border-radius:10px;padding:8px 10px;text-align:center"><div style="font-size:18px">${madalyalar[i]}</div><div style="font-size:11px;font-weight:700;color:#fff;margin-top:4px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis">${ad}</div><div style="font-size:11px;color:#ffb380;margin-top:2px">${r(val)}</div></div>`).join('')}
+    </div></div>`;
+  }
   // Kayıp/Artı özeti
   if(topKayip.length||topArtı.length){
     html+=`<div style="display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-bottom:16px">
