--- a/index.html
+++ b/index.html
@@ -34,32 +34,32 @@ body{font-family:'Segoe UI',Arial,sans-serif;background:#f0f2f5;min-height:100vh
 #sube-screen{display:none;align-items:center;justify-content:center;min-height:100vh;background:linear-gradient(135deg,var(--dark) 0%,var(--deep) 100%);padding:20px}
 .sube-card{background:#fff;border-radius:20px;padding:36px 28px;width:100%;max-width:380px;text-align:center;box-shadow:0 20px 60px rgba(0,0,0,0.3)}
 #loading-screen{display:none;align-items:center;justify-content:center;flex-direction:column;min-height:100vh;background:radial-gradient(ellipse at 50% 60%,#1a0800 0%,#0d0d0d 55%,#000 100%);gap:0;overflow:hidden;position:relative}
-.sp-fire-ring{position:absolute;width:320px;height:320px;border-radius:50%;background:radial-gradient(circle,rgba(255,120,0,0.35) 0%,rgba(232,60,4,0.18) 40%,transparent 70%);animation:fireRingPulse 2.8s ease-in-out infinite;opacity:0;animation-delay:1.2s}
-.sp-fire-ring2{position:absolute;width:480px;height:480px;border-radius:50%;background:radial-gradient(circle,rgba(255,60,0,0.12) 0%,transparent 65%);animation:fireRingPulse 3.5s ease-in-out 0.6s infinite}
+.sp-fire-ring{position:absolute;width:320px;height:320px;border-radius:50%;background:radial-gradient(circle,rgba(232,57,10,0.35) 0%,rgba(255,184,0,0.15) 40%,transparent 70%);animation:fireRingPulse 2.8s ease-in-out infinite;opacity:0;animation-delay:1.2s}
+.sp-fire-ring2{position:absolute;width:480px;height:480px;border-radius:50%;background:radial-gradient(circle,rgba(255,184,0,0.12) 0%,transparent 65%);animation:fireRingPulse 3.5s ease-in-out 0.6s infinite}
 .sp-sparks{position:absolute;width:100%;height:100%;pointer-events:none;z-index:1}
 .sp-spark{position:absolute;width:5px;height:5px;border-radius:50%;opacity:0}
-.sp-spark:nth-child(1){left:48%;top:42%;background:#ff6a00;animation:sparkFly1 1.2s ease-out 1.2s forwards}
-.sp-spark:nth-child(2){left:52%;top:40%;background:#ffb300;animation:sparkFly2 1s ease-out 1.4s forwards}
-.sp-spark:nth-child(3){left:45%;top:44%;background:#ff3c00;animation:sparkFly3 1.4s ease-out 1.1s forwards}
+.sp-spark:nth-child(1){left:48%;top:42%;background:#FFB800;animation:sparkFly1 1.2s ease-out 1.2s forwards}
+.sp-spark:nth-child(2){left:52%;top:40%;background:#E8390A;animation:sparkFly2 1s ease-out 1.4s forwards}
+.sp-spark:nth-child(3){left:45%;top:44%;background:#FFB800;animation:sparkFly3 1.4s ease-out 1.1s forwards}
 .sp-spark:nth-child(4){left:55%;top:43%;background:#fff176;animation:sparkFly4 1.1s ease-out 1.6s forwards}
-.sp-spark:nth-child(5){left:50%;top:38%;background:#ff6a00;animation:sparkFly1 1.3s ease-out 1.8s forwards}
-.sp-spark:nth-child(6){left:43%;top:46%;background:#ffb300;animation:sparkFly3 0.9s ease-out 2s forwards}
-.sp-spark:nth-child(7){left:57%;top:45%;background:#ff3c00;animation:sparkFly2 1.2s ease-out 2.1s forwards}
-.sp-spark:nth-child(8){left:49%;top:50%;background:#fff176;animation:sparkFly4 1s ease-out 2.3s forwards}
-.splash-icon{font-size:130px;line-height:1;filter:drop-shadow(0 0 30px #ff6a00) drop-shadow(0 0 60px rgba(255,80,0,0.7)) drop-shadow(0 8px 24px rgba(0,0,0,0.9));animation:burgerBoom 2s cubic-bezier(0.22,1.5,0.5,1) 0.8s forwards;opacity:0;transform:scale(0) translateY(60px) rotate(-25deg);position:relative;z-index:5}
+.sp-spark:nth-child(5){left:50%;top:38%;background:#E8390A;animation:sparkFly1 1.3s ease-out 1.8s forwards}
+.sp-spark:nth-child(6){left:43%;top:46%;background:#FFB800;animation:sparkFly3 0.9s ease-out 2s forwards}
+.sp-spark:nth-child(7){left:57%;top:45%;background:#E8390A;animation:sparkFly2 1.2s ease-out 2.1s forwards}
+.sp-spark:nth-child(8){left:49%;top:50%;background:#FFB800;animation:sparkFly4 1s ease-out 2.3s forwards}
+.splash-icon{font-size:130px;line-height:1;filter:drop-shadow(0 0 30px #E8390A) drop-shadow(0 0 60px rgba(255,184,0,0.6)) drop-shadow(0 8px 24px rgba(0,0,0,0.9));animation:burgerBoom 2s cubic-bezier(0.22,1.5,0.5,1) 0.8s forwards;opacity:0;transform:scale(0) translateY(60px) rotate(-25deg);position:relative;z-index:5}
 .splash-icon.landed{animation:burgerFloat 4s ease-in-out infinite!important;opacity:1!important}
 .splash-logo{display:flex;flex-direction:column;align-items:center;gap:4px;position:relative;z-index:5}
 .splash-brand{display:flex;gap:0;align-items:center;margin-top:14px}
-.splash-brand .letter{font-size:62px;font-weight:900;color:#fff;letter-spacing:2px;opacity:0;transform:translateY(50px) scale(0.3) rotateX(90deg);display:inline-block;text-shadow:0 0 20px rgba(255,255,255,0.5),0 4px 24px rgba(0,0,0,1);font-style:italic;transition:none}
-.splash-brand .letter.orange{color:#ff6a00;text-shadow:0 0 30px #ff6a00,0 0 60px rgba(255,80,0,0.8),0 0 100px rgba(255,60,0,0.4),0 4px 24px rgba(0,0,0,1)}
+.splash-brand .letter{font-size:62px;font-weight:900;color:#FFB800;letter-spacing:2px;opacity:0;transform:translateY(50px) scale(0.3) rotateX(90deg);display:inline-block;text-shadow:0 0 30px rgba(255,184,0,0.9),0 4px 24px rgba(0,0,0,1);font-style:italic;transition:none}
+.splash-brand .letter.orange{color:#E8390A;text-shadow:0 0 40px #E8390A,0 0 80px rgba(232,57,10,0.7),0 4px 24px rgba(0,0,0,1)}
 .splash-brand .gap{width:16px;display:inline-block}
-.splash-tagline{font-size:13px;letter-spacing:7px;color:rgba(255,160,60,0.7);text-transform:uppercase;margin-top:10px;opacity:0;animation:taglineIn 1.5s ease 9s forwards;text-shadow:0 0 20px rgba(255,100,0,0.5)}
+.splash-tagline{font-size:13px;letter-spacing:7px;color:rgba(255,184,0,0.7);text-transform:uppercase;margin-top:10px;opacity:0;animation:taglineIn 1.5s ease 9s forwards;text-shadow:0 0 20px rgba(232,57,10,0.5)}
 .splash-divider{display:flex;align-items:center;gap:12px;margin-top:20px;opacity:0;animation:fadeIn 1.2s ease 10s forwards}
-.splash-divider-line{width:60px;height:2px;background:linear-gradient(90deg,transparent,#ff6a00);box-shadow:0 0 8px #ff6a00}
-.splash-divider-line.right{background:linear-gradient(90deg,#ff6a00,transparent)}
-.splash-divider-dot{width:6px;height:6px;border-radius:50%;background:#ff6a00;box-shadow:0 0 12px #ff6a00,0 0 24px rgba(255,80,0,0.6)}
+.splash-divider-line{width:60px;height:2px;background:linear-gradient(90deg,transparent,#FFB800);box-shadow:0 0 8px #FFB800}
+.splash-divider-line.right{background:linear-gradient(90deg,#E8390A,transparent)}
+.splash-divider-dot{width:6px;height:6px;border-radius:50%;background:#E8390A;box-shadow:0 0 12px #E8390A,0 0 24px rgba(232,57,10,0.6)}
 .splash-progress{width:200px;height:3px;background:rgba(255,255,255,0.1);border-radius:3px;margin-top:32px;overflow:hidden;opacity:0;animation:fadeIn 0.5s ease 11s forwards}
-.splash-progress-bar{height:100%;width:0;background:linear-gradient(90deg,#ff3c00,#ff9a00,#fff);border-radius:3px;box-shadow:0 0 10px #ff6a00;animation:progressFill 3s cubic-bezier(0.4,0,0.2,1) 11s forwards}
+.splash-progress-bar{height:100%;width:0;background:linear-gradient(90deg,#E8390A,#FFB800,#fff);border-radius:3px;box-shadow:0 0 10px #FFB800;animation:progressFill 3s cubic-bezier(0.4,0,0.2,1) 11s forwards}
 .splash-loading-text{font-size:10px;letter-spacing:4px;color:rgba(255,255,255,0.3);text-transform:uppercase;margin-top:10px;opacity:0;animation:fadeIn 0.5s ease 11.2s forwards}
 @keyframes fireRingPulse{0%,100%{transform:scale(0.9);opacity:0.6}50%{transform:scale(1.15);opacity:1}}
 @keyframes burgerBoom{0%{opacity:0;transform:scale(0) translateY(60px) rotate(-25deg)}50%{opacity:1;transform:scale(1.35) translateY(-20px) rotate(10deg)}75%{transform:scale(0.92) translateY(5px) rotate(-4deg)}90%{transform:scale(1.06) translateY(-4px) rotate(2deg)}100%{opacity:1;transform:scale(1) translateY(0) rotate(0deg)}}
